# django-complex-querries

./: .gitignore  README.md  manage.py  pyproject.toml
reserve_service/: asgi.py  settings.py  urls.py  wsgi.py
reserve_service_app/: apps.py  models.py  querries.py  serialization.py  tests.py  views.py
reserve_service_app/migrations/: 0001_initial.py  0002_auto_20221103_0034.py  0003_alter_reservation_rental.py
